--- a/package.json
+++ b/package.json
@@ -30,39 +30,39 @@
   ],
   "devDependencies": {
     "@ons/design-system": "git+https://github.com/ONSdigital/design-system#61.0.4",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@rollup/plugin-terser": "^0.3.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.16",
-    "@types/fs-extra": "^11.0.1",
-    "@types/glob": "^8.0.1",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.13",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.0",
-    "glob": "^8.1.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "postcss": "^8.4.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup": "^3.10.0",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "sass": "^1.57.1",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.23.24",
-    "typescript": "^4.9.4"
+    "@rollup/plugin-commonjs": "24.0.0",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "5.0.2",
+    "@rollup/plugin-terser": "0.3.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/cors": "2.8.13",
+    "@types/express": "4.17.16",
+    "@types/fs-extra": "11.0.1",
+    "@types/glob": "8.0.1",
+    "@types/jest": "29.4.0",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "autoprefixer": "10.4.13",
+    "cors": "2.8.5",
+    "express": "4.18.2",
+    "fs-extra": "11.1.0",
+    "glob": "8.1.0",
+    "jest": "29.4.1",
+    "jest-environment-jsdom": "29.4.1",
+    "postcss": "8.4.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rollup": "3.10.0",
+    "rollup-plugin-typescript2": "0.34.1",
+    "sass": "1.57.1",
+    "ts-jest": "29.0.5",
+    "ts-node": "10.9.1",
+    "typedoc": "0.23.24",
+    "typescript": "4.9.4"
   },
   "dependencies": {
-    "classnames": "^2.3.2"
+    "classnames": "2.3.2"
   }
 }
